--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -2,33 +2,24 @@ spring:
   application:
     name: server
   datasource:
-    url: ${MSSQL_URL}
-    username: ${MSSQL_USERNAME}
-    password: ${MSSQL_PASSWORD}
-  ssl:
-    bundle:
-      pem:
-        crazy-collectors:
-          truststore:
-            certificate: file:${CRAZY_COLLECTORS_CERT}
-        heroku:
-          truststore:
-            certificate: file:${HEROKU_CERT}
+    url: jdbc:postgresql://localhost:5432/mydatabase
+    username: sa
+    password: YourStrong@Passw0rd
+  jpa:
+    hibernate:
+      ddl-auto: update
+
 
 server:
   port: 9443
-  ssl:
-    enabled: true
-    key-store-type: PKCS12
-    key-store: file:${KEYSTORE_PATH}
-    key-store-password: ${KEYSTORE_PASSWORD}
+
 
 discord:
   coolcodehacker:
     # It cannot be named as token. Otherwise, the env variable will override the specific profile variable... IDK why...
-    token1: ${DISCORD_COOLCODEHACKER_TOKEN}
-    channel: ${DISCORD_COOLCODEHACKER_CHANNEL_ID}
+    token1:
+    channel:
 
 app:
-  coordinator-auth-token: ${COORDINATOR_AUTH_TOKEN}
-  instruction-url: ${INSTRUCTION_URL}
+  coordinator-auth-token:
+  instruction-url:
