update for heroku

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,6 +3,10 @@ FROM openjdk:17-jdk-alpine
 # Set the working directory inside the container
 WORKDIR /app
 
+COPY . .
+
+RUN ./gradlew build
+
 # Copy the Gradle build files and application code to the container
 COPY build/libs/server-0.0.1-SNAPSHOT.jar app.jar
 
