--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -2,9 +2,9 @@ spring:
   application:
     name: server
   datasource:
-    url: jdbc:postgresql://localhost:5432/mydatabase
-    username: sa
-    password: YourStrong@Passw0rd
+    url: ${JDBC_DATABASE_URL}
+    username: ${JDBC_DATABASE_USERNAME}
+    password: ${JDBC_DATABASE_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
