--- a/instruction/Dockerfile
+++ b/instruction/Dockerfile
@@ -13,8 +13,11 @@ RUN npm install
 # Copy the rest of the application code to the container
 COPY . .
 
+# Build the Next.js application
+RUN npm run build
+
 # Expose the port the application will run on
 EXPOSE 3000
 
 # Start the application
-CMD ["npm", "start"]
+CMD ["node", ".next/standalone/server.js"]
