--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -32,4 +32,4 @@ COPY --from=builder /app/build ./build
 EXPOSE 3000
 
 # Serve the built files
-CMD ["serve", "-s", "build", "-l", "3000"]
+CMD ["sh", "-c", "serve -s build -l ${PORT:-3000}"]
