--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,3 +15,11 @@ autorestart=true
 command=npm start --prefix /app/instruction
 autostart=true
 autorestart=true
+
+[program:nginx]
+command=/usr/sbin/nginx -g "daemon off;"
+autostart=true
+autorestart=true
+stderr_logfile=/var/log/nginx.err.log
+stdout_logfile=/var/log/nginx.out.log
+
