--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -6,8 +6,8 @@ server {
         proxy_pass http://localhost:8080/;
     }
 
-    location /web/ {
-        rewrite ^/web/(.*)$ /$1 break;
+    location /ui/ {
+        rewrite ^/ui/(.*)$ /$1 break;
         proxy_pass http://localhost:3000/;
     }
 
