--- a/ui/package.json
+++ b/ui/package.json
@@ -2,7 +2,7 @@
   "name": "ui",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/web/",
+  "homepage": "/ui/",
   "dependencies": {
     "@emotion/styled": "^11.11.5",
     "@mui/base": "^5.0.0-beta.40",
