--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen <%= ENV["PORT"] %>;
+    listen ${PORT}; # Placeholder for the dynamic port
 
     location /api/ {
         rewrite ^/api/(.*)$ /$1 break;
