--- a/supervisord.conf
+++ b/supervisord.conf
@@ -31,7 +31,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:nginx]
-command=/usr/sbin/nginx -g "daemon off;"
+command=/bin/sh -c "export PORT=${PORT:-8081} && envsubst '\$PORT' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && exec /usr/sbin/nginx -g 'daemon off;'"
 autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
