--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -11,9 +11,8 @@ server {
         proxy_pass http://localhost:3000/;
     }
 
-    location /instruction/ {
-        rewrite ^/instruction/(.*)$ /$1 break;
-        proxy_pass http://localhost:3001/;
+    location /instruction {
+        proxy_pass http://localhost:3001;
     }
 
 }
