--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen ${PORT}; # Placeholder for the dynamic port
 
     location /api/ {
-        proxy_pass http://localhost:9443/;
+        proxy_pass http://localhost:9443/api/;
     }
 
     location /ui/ {
