--- a/instruction/package.json
+++ b/instruction/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "next build",
     "start": "next start -p 3001",
+    "dev": "next dev -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
