--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -13,6 +13,10 @@ server {
         proxy_pass http://localhost:3001;
     }
 
+    localhost /evaluate {
+        proxy_pass http://localhost:9443/api/api/evaluation;
+    }
+
     location / {
         rewrite ^/$ /instruction;
     }
