--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -13,7 +13,7 @@ server {
         proxy_pass http://localhost:3001;
     }
 
-    localhost /evaluate {
+    location /evaluate {
         proxy_pass http://localhost:9443/api/api/evaluation;
     }
 
