--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location /evaluate {
-        proxy_pass http://localhost:9443/api/evaluation;
+        proxy_pass http://localhost:9443/api/evaluate;
     }
 
     location / {
